Changed bootstrap.min to avoid collapse

--- a/resources/css/mystyle-default.css
+++ b/resources/css/mystyle-default.css
@@ -64,7 +64,7 @@ body, html {
 
 
 #id-header-navbar {
-    min-width: 800px;
+    min-width: 500px;
     /*width:100%;*/
     background-color:#4CAF50;
     color:white;
@@ -191,6 +191,34 @@ body, html {
 .navbar-btn .ui-button {
     margin-top:2px;
 }
+
+
+
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}
+
+.navbar-collapse:after {
+  float: right!important;
+}
+
+
+
+
+
+
 
 /*Modal dialog ---------------------------------------------------------------*/
 .modal {
